# hampel

./: .gitlab-ci.yml  CMakeLists.txt  README.md
include/hampel/: hampel.h
test/: CMakeLists.txt  hampel_test.cpp
